Added Emergency Services, Success Stories Section to enhance the user experience.

--- a/src/components/jobs/JobGuide.astro
+++ b/src/components/jobs/JobGuide.astro
@@ -27,7 +27,7 @@
 
       <div class="mt-6 bg-blue-50 rounded-lg p-4">
         <p class="text-sm text-blue-700">
-          Need help? Contact us at <a href="mailto:support@dzalekaconnect.org" class="underline">support@dzalekaconnect.org</a>
+          Need help? Contact us at <a href="mailto:dzalekaconnect@gmail.com" class="underline">dzalekaconnect@gmail.com</a>
         </p>
       </div>
     </div>
